ToontownOnline/toontownD-151110_203102.log


Starting Toontown...
Current time: Tue Nov 10 20:31:02 2015 EST
sys.path =  ['/Users/Aaron/Downloads/Possible-Toontown-Online-Source-master', '/usr/lib/python27.zip', '/usr/lib/python2.7', '/usr/lib/python2.7/plat-darwin', '/usr/lib/python2.7/plat-mac', '/usr/lib/python2.7/plat-mac/lib-scriptpackages', '/usr/Extras/lib/python', '/usr/lib/python2.7/lib-tk', '/usr/lib/python2.7/lib-old', '/usr/lib/python2.7/lib-dynload', '/Library/Python/2.7/site-packages', '/Developer/Panda3D']
sys.argv =  ['/Users/Aaron/Downloads/Possible-Toontown-Online-Source-master/start.py']
Traceback (most recent call last):
  File "/Users/Aaron/Downloads/Possible-Toontown-Online-Source-master/start.py", line 1, in <module>
    from toontown.toonbase import ToontownStart
  File "/Users/Aaron/Downloads/Possible-Toontown-Online-Source-master/toontown/toonbase/ToontownStart.py", line 17, in <module>
    from toontown.launcher.ToontownDummyLauncher import ToontownDummyLauncher
  File "/Users/Aaron/Downloads/Possible-Toontown-Online-Source-master/toontown/launcher/ToontownDummyLauncher.py", line 3, in <module>
    from toontown.launcher.ToontownLauncher import ToontownLauncher
  File "/Users/Aaron/Downloads/Possible-Toontown-Online-Source-master/toontown/launcher/ToontownLauncher.py", line 42, in <module>
    from toontown.toonbase import TTLocalizer
  File "/Users/Aaron/Downloads/Possible-Toontown-Online-Source-master/toontown/toonbase/TTLocalizer.py", line 8
    def getLanguage():
      ^
IndentationError: expected an indented block
